--- a/index.html
+++ b/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>SrMueble</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <header>
+            <h1 class="tituloPrincipal">Sr.Mueble</h1>
+        </header>
+        <main>
+            <!-- Banner -->
+            <picture>
+                <source srcset="
+                img/banner_silla.jpg 1x,
+                img/banner_silla@2x.jpg 2x,
+                img/banner_silla@3x.jpg 3x
+                ">
+                <img src="" alt="silla azul de madera">
+            </picture>
+
+
+            <!-- Teléfono -->
+            <a href="tel:+34666666666">+34 666 666 666</a>
+            <!-- Quienes Somos -->
+            <section class="quienes">
+                <h4 class="subtitulo">¿Quienes somos?</h4>
+                <article class="anyo1988">
+                    <h5 class="anyo1988__titulo">1988</h5>
+                    <p class="anyo1988__texto">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Faucibus sollicitudin et tellus.
+                    </p>
+                </article>
+                <article class="anyo1994">
+                    <h5 class="anyo1994__titulo">1994</h5>
+                    <p class="anyo1994__texto">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Faucibus sollicitudin et tellus.
+                    </p>
+                </article>
+            </section>
+            <!-- YouTube -->
+            <iframe class="youtube"></iframe>
+            <!-- Servicios -->
+            <section class="servicios">
+                <h4 class="servicios__titulo">Servicios</h4>
+                <picture></picture>
+                <picture></picture>
+                <picture></picture>
+            </section>
+            <!-- Newsletters -->
+            <section class="newsletter">
+                <h5 class="newsletter__titulo">¿Quieres recibir nuestras novedades?</h5>
+                <form class="newsletter__formulario">
+                    <input type="email" name="email" placeholder="e-mail" />
+                    <button type="submit">REGISTRATE</button>
+                </form>
+            </section>
+        </main>
+        <footer>
+            <article class="contactar">
+                <h5 class="contactar__titulo">Contactar</h5>
+                <ul class="contactar__lista">
+                    <li>Dirección Plaza España, 34</li>
+                    <li>Palma de Mallorca</li>
+                    <li>info@srmuebles.com</li>
+                </ul>
+            </article>
+            <article class="redes">
+                <h5 class="redes__titulo">Contactar</h5>
+                <ul class="redes__lista">
+                    <li>Dirección Plaza España, 34</li>
+                    <li>Palma de Mallorca</li>
+                    <li>info@srmuebles.com</li>
+                </ul>
+            </article>
+            <h6 class="copyright">Copyright 2021 - SrMueble</h6>
+        </footer>
+    </body>
 </html>
