--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 img/banner_silla@3x.jpg 3x
                 ">
                 <img src="" alt="silla azul de madera">
+                <!-- Mi movil tiene 300px -->
             </picture>
 
 
