tema picture, todas las fotos

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <!-- Banner -->
             <picture>
                 <source srcset="
-                img/banner_silla.jpg 1x,
-                img/banner_silla@2x.jpg 2x,
-                img/banner_silla@3x.jpg 3x
+                ./img/banner_silla.jpg 1x,
+                ./img/banner_silla@2x.jpg 2x,
+                ./img/banner_silla@3x.jpg 3x
                 ">
                 <img src="" alt="silla azul de madera">
-                <!-- Mi movil tiene 300px -->
             </picture>
 
 
@@ -49,9 +48,30 @@
             <!-- Servicios -->
             <section class="servicios">
                 <h4 class="servicios__titulo">Servicios</h4>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
+                <picture>
+                    <source srcset="
+                    ./img/sofaAmarillo.jpg 1x,
+                    ./img/sofaAmarillo@2x.jpg 2x,
+                    ./img/sofaAmarillo@3x.jpg 3x
+                    ">
+                    <img src="" alt="silla azul de madera">
+                </picture>
+                <picture>
+                    <source srcset="
+                    ./img/sofaRojo.jpg 1x,
+                    ./img/sofaRojo@2x.jpg 2x,
+                    ./img/sofaRojo@3x.jpg 3x
+                    ">
+                    <img src="" alt="silla azul de madera">
+                </picture>
+                <picture>
+                    <source srcset="
+                    ./img/sofaVerde.jpg 1x,
+                    ./img/sofaVerde@2x.jpg 2x,
+                    ./img/sofaVerde@3x.jpg 3x
+                    ">
+                    <img src="" alt="silla azul de madera">
+                </picture>
             </section>
             <!-- Newsletters -->
             <section class="newsletter">
